--- a/templates/login/register.html
+++ b/templates/login/register.html
@@ -109,6 +109,11 @@
     <div class="tips">
 
     </div>
+        <div>
+            <a  href="{% url 'login' %}">返回登录？</a> &#12288;&#12288;&#12288;&#12288;&#12288;
+            &#12288;&#12288;&#12288;&#12288;&#12288;&#12288;&#12288;&#12288;&#12288;&#12288;&#12288;&#12288;
+            <a href="{% url 'forget_passwd' %}">找回密码？</a>
+        </div>
 </form>
 <div style="text-align:center;margin:50px 0; font:normal 14px/24px 'MicroSoft YaHei';">
 
