--- a/hlPY/statics/css/style.css
+++ b/hlPY/statics/css/style.css
@@ -1028,7 +1028,7 @@ nav.navbar.bootsnav ul.nav > li > a{
   color: #0f0f0f;
   font-size: 14px;
   font-weight:600;
-  text-transform:uppercase;
+  /*text-transform:uppercase;*/
   position:relative;
   overflow:hidden;
   font-family: 'Source Sans Pro';
