--- a/templates/course_display.html
+++ b/templates/course_display.html
@@ -1,100 +1,62 @@
 {% extends 'base.html' %}
 {% load staticfiles %}
-
-{%block title%}{%endblock%}
-
+{%block title%}课程展示{%endblock%}
+{% block css %}
+    <link href="{% static 'css/tool_display.css' %}" rel="stylesheet"/>
+{% endblock %}
 {%block content%}
 <!--Page Header-->
 <section class="page_header padding-top">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12 page-content">
-        <h1>工具集展示</h1>
-        <p></p>
-        <div class="page_nav">
-      <span>当前位置:</span> <a href="#">首页</a> <span><i class="fa fa-angle-double-right"></i>工具集展示</span>
-      </div>
-      </div>
-    </div>
-  </div>
+	<div class="container" style="margin-top: 80px">
+		<div class="row">
+			<div class="col-md-12 page-content">
+                {% if course_type == 'basic' %}
+                    <h1>基础课程展示</h1>
+                    <div class="page_nav">
+					<span>当前位置:</span>
+					<a href="{% url 'home' %}">首页</a> <span><i class="fa fa-angle-double-right"></i>基础课程展示</span>
+				</div>
+                {% else %}
+                    <h1>实战课程展示</h1>
+                    <div class="page_nav">
+					<span>当前位置:</span>
+					<a href="{% url 'home' %}">首页</a> <span><i class="fa fa-angle-double-right"></i>实战课程展示</span>
+				</div>
+                {% endif %}
+
+
+			</div>
+		</div>
+	</div>
 </section>
 <!--Page Header-->
 
-
-
 <!-- Courses -->
 <section id="course_all" class="padding-bottom">
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-6 col-md-4">
-        <div class="course margin_top wow fadeIn" data-wow-delay="400ms">
-          <div class="image bottom25">
-            <img src="images/courses1.jpg" alt="Course" class="border_radius">
-          </div>
-          <h3 class="bottom10" style="color: #337ab7;"><a href="#">工具1：快乐学Python</a></h3>
-          <!--<p class="bottom20">简介：快乐学Python可以有效提升青少年的逻辑思维能力、引导启迪孩子对编程类学习的热爱，帮助孩子科学智能学习Python。同时快乐学Python为初学者准备了普适性强的实战项目，面向实际应用，助力职场发展。我们的目标是推出具有智能学习引导、优秀学习课程、上手简单的Python学习平台和课程，解决青少年与初学者学习编程的问题。</p>-->
-          <textarea rows="3" cols="40" style="border-style: hidden;">简介：快乐学Python可以有效提升青少年的逻辑思维能力、引导启迪孩子对编程类学习的热爱，帮助孩子科学智能学习Python。同时快乐学Python为初学者准备了普适性强的实战项目，面向实际应用，助力职场发展。我们的目标是推出具有智能学习引导、优秀学习课程、上手简单的Python学习平台和课程，解决青少年与初学者学习编程的问题。</textarea>
-          <a class="btn_common yellow border_radius" href="course_detail.html">下载</a>
-        </div>
-      </div>
-      <div class="col-sm-6 col-md-4">
-        <div class="course margin_top wow fadeIn" data-wow-delay="500ms">
-          <div class="image bottom25">
-            <img src="images/courses2.jpg" alt="Course" class="border_radius">
-          </div>
-          <h3 class="bottom10" style="color: #337ab7;"><a href="course_detail.html">工具2：</a></h3>
-					<!--<p class="bottom20">简介：</p>-->
-					<textarea rows="3" cols="40" style="border-style: hidden;">简介：快乐学Python可以有效提升青少年的逻辑思维能力、引导启迪孩子对编程类学习的热爱，帮助孩子科学智能学习Python。同时快乐学Python为初学者准备了普适性强的实战项目，面向实际应用，助力职场发展。我们的目标是推出具有智能学习引导、优秀学习课程、上手简单的Python学习平台和课程，解决青少年与初学者学习编程的问题。</textarea>
-          <a class="btn_common yellow border_radius" href="course_detail.html">下载</a>
-        </div>
-      </div>
-      <div class="col-sm-6 col-md-4">
-        <div class="course margin_top wow fadeIn" data-wow-delay="600ms">
-          <div class="image bottom25">
-            <img src="images/courses3.jpg" alt="Course" class="border_radius">
-          </div>
-          <h3 class="bottom10" style="color: #337ab7;"><a href="course_detail.html">工具3：</a></h3>
-					<!--<p class="bottom20">简介：</p>-->
-					<textarea rows="3" cols="40" style="border-style: hidden;">简介：快乐学Python可以有效提升青少年的逻辑思维能力、引导启迪孩子对编程类学习的热爱，帮助孩子科学智能学习Python。同时快乐学Python为初学者准备了普适性强的实战项目，面向实际应用，助力职场发展。我们的目标是推出具有智能学习引导、优秀学习课程、上手简单的Python学习平台和课程，解决青少年与初学者学习编程的问题。</textarea>
-          <a class="btn_common yellow border_radius" href="#.">下载</a>
-        </div>
-      </div>
-      <div class="col-sm-6 col-md-4">
-        <div class="course margin_top  wow fadeIn" data-wow-delay="700ms">
-          <div class="image bottom25">
-            <img src="images/courses4.jpg" alt="Course" class="border_radius">
-          </div>
-          <h3 class="bottom10" style="color: #337ab7;"><a href="course_detail.html">工具4：</a></h3>
-					<!--<p class="bottom20">简介：</p>-->
-					<textarea rows="3" cols="40" style="border-style: hidden;">简介：快乐学Python可以有效提升青少年的逻辑思维能力、引导启迪孩子对编程类学习的热爱，帮助孩子科学智能学习Python。同时快乐学Python为初学者准备了普适性强的实战项目，面向实际应用，助力职场发展。我们的目标是推出具有智能学习引导、优秀学习课程、上手简单的Python学习平台和课程，解决青少年与初学者学习编程的问题。</textarea>
-          <a class="btn_common yellow border_radius" href="course_detail.html">下载</a>
-        </div>
-      </div>
-      <div class="col-sm-6 col-md-4">
-        <div class="course margin_top wow fadeIn" data-wow-delay="800ms">
-          <div class="image bottom25">
-            <img src="images/courses5.jpg" alt="Course" class="border_radius">
-          </div>
-          <h3 class="bottom10" style="color: #337ab7;"><a href="course_detail.html">工具5：</a></h3>
-					<!--<p class="bottom20">简介：</p>-->
-					<textarea rows="3" cols="40" style="border-style: hidden;">简介：快乐学Python可以有效提升青少年的逻辑思维能力、引导启迪孩子对编程类学习的热爱，帮助孩子科学智能学习Python。同时快乐学Python为初学者准备了普适性强的实战项目，面向实际应用，助力职场发展。我们的目标是推出具有智能学习引导、优秀学习课程、上手简单的Python学习平台和课程，解决青少年与初学者学习编程的问题。</textarea>
-          <a class="btn_common yellow border_radius" href="course_detail.html">下载</a>
-        </div>
-      </div>
-      <div class="col-sm-6 col-md-4">
-        <div class="course margin_top wow fadeIn" data-wow-delay="900ms">
-          <div class="image bottom25">
-            <img src="images/courses6.jpg" alt="Course" class="border_radius">
-          </div>
-          <h3 class="bottom10" style="color: #337ab7;"> <a href="course_detail.html">工具6：</a></h3>
-					<!--<p class="bottom20">简介：</p>-->
-					<textarea rows="3" cols="40" style="border-style: hidden;">简介：快乐学Python可以有效提升青少年的逻辑思维能力、引导启迪孩子对编程类学习的热爱，帮助孩子科学智能学习Python。同时快乐学Python为初学者准备了普适性强的实战项目，面向实际应用，助力职场发展。我们的目标是推出具有智能学习引导、优秀学习课程、上手简单的Python学习平台和课程，解决青少年与初学者学习编程的问题。</textarea>
-          <a class="btn_common yellow border_radius" href="course_detail.html">下载</a>
-        </div>
-      </div>
-    </div>
-  </div>
+	<div class="container">
+		<div class="row">
+            {% for course in course_info %}
+			<div class="col-sm-6 col-md-4">
+				<div class="course margin_top wow fadeIn" data-wow-delay="400ms">
+					<div class="image bottom25">
+						<img src="{% static course.course_image %}" alt="Course" class="border_radius">
+					</div>
+					<h3 class="bottom10"><a href="javascrip:void(0);">{{ course.course_name }}</a></h3>
+
+					<div class="download_div">
+                        <a class="btn_common yellow border_radius download" href="{% url 'course'  course_type course.course_id  %}">进入学习</a>
+
+                    </div>
+				</div>
+			</div>
+
+            {% endfor %}
+		</div>
+	</div>
 </section>
-<!-- Courses ends -->
+<!-- Courses -->
+{%endblock%}
+
+{% block js %}
 
 {% endblock %}
