--- a/templates/tool_display.html
+++ b/templates/tool_display.html
@@ -1,17 +1,20 @@
-{% load staticfiles %}
 {% extends 'base.html' %}
+{% load staticfiles %}
 {%block title%}网络运维工具集{%endblock%}
+{% block css %}
+    <link href="{% static 'css/tool_display.css' %}" rel="stylesheet"/>
+{% endblock %}
 {%block content%}
 <!--Page Header-->
 <section class="page_header padding-top">
-	<div class="container">
+	<div class="container" style="margin-top: 80px">
 		<div class="row">
 			<div class="col-md-12 page-content">
-				<h1>网络运维工具集展示</h1>
+				<h1>网络运维工具集</h1>
 				<p></p>
 				<div class="page_nav">
 					<span>当前位置:</span>
-					<a href="../hlPY/templates/home.html">首页</a> <span><i class="fa fa-angle-double-right"></i>作品展示<i class="fa fa-angle-double-right"></i>自制工具展示</span>
+					<a href="{% url 'home' %}">首页</a> <span><i class="fa fa-angle-double-right"></i>网络运维工具集</span>
 				</div>
 			</div>
 		</div>
@@ -23,15 +26,20 @@
 <section id="course_all" class="padding-bottom">
 	<div class="container">
 		<div class="row">
-            {% for tool in tools %}
+            {% for tool in tool_info %}
 			<div class="col-sm-6 col-md-4">
 				<div class="course margin_top wow fadeIn" data-wow-delay="400ms">
 					<div class="image bottom25">
-						<img src="{% static 'img/courses1.jpg' %}" alt="Course" class="border_radius">
+						<img src="{% static tool.tool_image %}" alt="Course" class="border_radius">
 					</div>
-					<h3 class="bottom10"><a href="{% static 'course_detail.html' %}">{{ tool.tool_name }}</a></h3>
-					<p class="bottom20">{{ tool.tool_describe }}</p>
-					<a class="btn_common yellow border_radius" href="course_detail.html">下载</a>
+					<h3 class="bottom10"><a href="javascrip:void(0);">{{ tool.tool_name }}</a></h3>
+                    <div class="discription">
+                        <textarea class="discription">{{ tool.tool_describe }}</textarea>
+                    </div>
+					<div class="download_div">
+                        <a class="btn_common yellow border_radius download" href="{% url 'tool_download'  tool.tool_id  %}" id="{{ tool.tool_id }}">下载</a>
+                    <a class="btn_common comm_span">下载次数：{{ tool.download_num }}</a>
+                    </div>
 				</div>
 			</div>
 
@@ -41,3 +49,7 @@
 </section>
 <!-- Tools -->
 {%endblock%}
+
+{% block js %}
+
+{% endblock %}
