--- a/templates/user_page.html
+++ b/templates/user_page.html
@@ -1,4 +1,3 @@
-
 {% extends 'base.html' %}
 {% load staticfiles %}
 {% block css %}
@@ -7,14 +6,12 @@
 
 
 {% block js %}
-
-
     <script src="{% static 'js/jquery-2.2.3.js' %}"></script>
     <script src="{% static "js/user_page.js"%}"></script>
     <script src="{% static 'js/jquery-2.2.3.js' %}"></script>
     <script src="{% static 'js/echarts.min.js'%}"></script>
     <script src="{% static 'js/pie.js'%}"></script>
-            <script >
+    <script >
         phonenumber ={{ user_info.phone|slice:":3" }}+"****"+{{ user_info.phone|slice:"7:" }};
     </script>
  {% endblock %}
@@ -24,10 +21,10 @@
 
 
 <body style="width: 100%; height: 100%; font-family:'Source Sans Pro'" onload="Abc()" >    //页面刷新时执行函数Abc()
-<div style="height: 64px; min-height: 100%;width: auto; border:1px solid #000; " ></div>
-<div style="height: 100vh; width: auto; border:3px solid #000;margin-outside: 20px; color: honeydew" >
-    <div class="right" style="float:right;height: auto; width: 80%; border:1px solid #ff0000;background-color:#2D2C2C" >
-        <div style="height:80%; width: 100%; border:1px solid green" >
+<div style="height: 64px; min-height: 100%;width: auto; border:0px solid #000; " ></div>
+<div style="height: 100vh; width: auto; border:0px solid #000;margin-outside: 20px; color: honeydew;background-color: black" >
+    <div class="right" style="float:right;height: auto; width: 80%; border:0px solid #ff0000;background-color:#2D2C2C" >
+        <div style="height:80%; width: 100%; padding-top:15px;border:0px solid green" >
         <table id="course" style="width: 80%;text-align:center ">
         <tr >
             <th style="text-align:center!important; " > 课 程 名</th>
@@ -73,10 +70,10 @@
 
     <div>
 
-    <div id="finishcourse" style="display: none">
-        <table style="width: 80%;text-align:center ">
-            <tr>
-            <th style="text-align:center!important;" > 课 程 名</th>
+    <div id="finishcourse" style="display: none;padding-top: 15px">
+        <table style="width: 80%;text-align:center">
+            <tr >
+            <th style="text-align:center!important" > 课 程 名</th>
             <th style="text-align:center!important;" > 学 习 进 度</th>
             <th style="text-align:center!important;" >  学 习 时 长 </th>
             <th style="text-align:center!important;" >  学 习 状 态 </th>
@@ -101,6 +98,28 @@
                </form>
             </td>
               </tr>
+      {% endif %}
+            {% endfor %}
+             {% for j in practice_course_info %}
+
+                {% if  j.rate == "100%" %}
+            <tr border="0.1">
+                <td >{{j.practice_course_name}}</td>
+                <td style="display: none"  class="rate">{{ j.rate }}</td>
+                <td style="display: none"  class="course_name">{{ j.practice_course_name }}</td>
+                <td  class="yuan" style="height:100px; width:80px ;border: black solid 0px"  ></td>
+                <td>{{ j.practice_course_time }}</td>
+
+            <td>
+                <form   action="{% url 'user_course_locate' %} " method="post">
+                    {% csrf_token %}
+                <input style="display: none" name="course_name" value={{j.practice_course_name}} >
+               <input style="display: none" name="course_id" value={{j.practice_course_id}}>
+               <input style="display: none" name="type" value={{j.type}}>
+               <button type="submit"> 开始学习</button>
+               </form>
+            </td>
+              </tr>
                 {% endif %}
             {% endfor %}
         </table>
@@ -113,23 +132,24 @@
     </div>
 
     </div>
-    <div class="left" style="height:100vh;width: 20%; border: 1px solid #1d3e81;background-color:#2D2C2C ">
+    <div class="left" style="height:100vh;width: 20%; border: 0px solid #1d3e81;background-color:#2D2C2C ">
 
-        <div class="for" style="height: 85%; width: auto; border:1px solid yellow; ">
-            <ul>
+        <div id="page" class="for" style="height: 85%; width: auto; border:0px solid yellow; ">
+            <ul style="padding: 15px 5px 5px 10px">
 
                 <li style="list-style-type:none">用户名: {{ user_info.username }}</li>
                 <li style="list-style-type:none">学习时长: {{ user_info.learn_time }}</li>
                 <li style="list-style-type:none">性别: {{ user_info.sex }}</li>
                 <li style="list-style-type:none">年龄:{{ user_info.age }}</li>
-                <li style="list-style-type:none">手机号: {{ user_info.phone }}</li>
-                <li style="list-style-type:none">邮箱: {{ user_info.email}}</li>
+                <li id="pagephone" style="list-style-type:none">手机号: {{ user_info.phone }}</li>
+                <li id="pageemail" style="list-style-type:none">邮箱: {{ user_info.email}}</li>
 
             </ul>
             <ul style="text-align: center">
                 <button id="changeinfo" style="position: center">修改信息</button>
             </ul>
-            <form id="change" action="{% url  "user_info_modify"%}" style="display: none" method="post">
+{#            <form id="change" action="{% url  "user_info_modify"%}" style="display: none;padding: 15px 5px 5px 10px" method="post">#}
+            <form id="change"  style="display: none;padding: 15px 5px 5px 10px" method="post">
                 {% csrf_token %}
                     <div class="register-box">
                     <label for="username" class="username_label">用 户 名 {{ user_info.username }}
@@ -175,12 +195,14 @@
                         <span>邮 箱&#8197;&#8197;&#8197;&#8197;&#8197;&#8197;&#8197;&#8197;&#8197;</span>
                         <input style="color: white" class="phone" name="email" maxlength="20" type="text" value="{{ user_info.email }}">
                     </label>
-                    <div class="tips">
+                    <div class="tips" id="backinfo">
 
                     </div>
                 </div>
             <div>
-                <button type="submit"; id="changeconfirm";>保存</button>
+{#                <button type="submit"; id="changeconfirm">保存</button>#}
+
+                 <button type="button"; id="changeconfirm">保存</button>
                 <div style="float:right ">
                 <button type="submit"; id="changeback";>返回</button>
                 </div>
