--- a/templates/continue_learn.html
+++ b/templates/continue_learn.html
@@ -268,6 +268,8 @@
                                 document.getElementById('next').style.backgroundColor = '#82C6E0';
                                 document.getElementById('clear').disabled = true;
                                 document.getElementById('clear').style.backgroundColor = 'grey';
+                                document.getElementById('hint').disabled = true;
+                                document.getElementById('hint').style.backgroundColor = 'grey';
 
                             }
                             //将代码执行结果是否正确显示在课程对话框中
