--- a/templates/user_page.html
+++ b/templates/user_page.html
@@ -19,7 +19,6 @@
 
 
 
-
 <body style="width: 100%; height: 100%; font-family:'Source Sans Pro'" onload="Abc()" >    //页面刷新时执行函数Abc()
 <div style="height: 64px; min-height: 100%;width: auto; border:0px solid #000; " ></div>
 <div style="height: 100vh; width: auto; border:0px solid #000;margin-outside: 20px; color: honeydew;background-color: black" >
@@ -42,7 +41,7 @@
                 <td style="display: none;"  class="rate">{{ i.rate }}</td>
 {#                 课程名称#}
                 <td style="display: none; "  class="course_name">{{ i.basic_course_name }}</td>
-{#                 //课程进度#}
+{#                课程进度#}
                 <td  class="yuan" style="height:100px; width:80px ;border: black solid 0px" ></td>
 {#                 某课程课程学习时长#}
                 <td>{{ i.basic_course_time }} </td>
@@ -60,6 +59,28 @@
               </tr>
 
         {% endif %}
+            {% endfor %}
+        {% for j in practice_course_info %}
+
+                {% if  j.rate != "100%" %}
+            <tr border="0.1">
+                <td >{{j.practice_course_name}}</td>
+                <td style="display: none"  class="rate">{{ j.rate }}</td>
+                <td style="display: none"  class="course_name">{{ j.practice_course_name }}</td>
+                <td  class="yuan" style="height:100px; width:80px ;border: black solid 0px"  ></td>
+                <td>{{ j.practice_course_time }}</td>
+
+            <td>
+                <form   action="{% url 'user_course_locate' %} " method="post">
+                    {% csrf_token %}
+                <input style="display: none" name="course_name" value={{j.practice_course_name}} >
+               <input style="display: none" name="course_id" value={{j.practice_course_id}}>
+               <input style="display: none" name="type" value={{j.type}}>
+               <button type="submit"> 开始学习</button>
+               </form>
+            </td>
+              </tr>
+                {% endif %}
             {% endfor %}
         </table>
             <div style="text-align:center">
@@ -149,7 +170,7 @@
                 <button id="changeinfo" style="position: center">修改信息</button>
             </ul>
 {#            <form id="change" action="{% url  "user_info_modify"%}" style="display: none;padding: 15px 5px 5px 10px" method="post">#}
-            <form id="change"  style="display: none;padding: 15px 5px 5px 10px" method="post">
+            <form id="change"  style="display: none;padding: 15px 5px 5px 10px" >
                 {% csrf_token %}
                     <div class="register-box">
                     <label for="username" class="username_label">用 户 名 {{ user_info.username }}
@@ -203,27 +224,28 @@
 {#                <button type="submit"; id="changeconfirm">保存</button>#}
 
                  <button type="button"; id="changeconfirm">保存</button>
+
                 <div style="float:right ">
                 <button type="submit"; id="changeback";>返回</button>
                 </div>
             </div>
 
-                {% if error %}
-
-                    <script language="javascript" type="text/javascript">
-
-                        alert("修改失败");
-                        window.location.href="{% url "user_page" %}";
-
-                   </script>
-
-                {% endif %}
-                {% if success %}
-                   <script language="javascript" type="text/javascript">
-                        alert("修改成功");
-                        window.location.href="{% url "user_page" %}";
-                   </script>
-                {% endif %}
+{#                {% if error %}#}
+{##}
+{#                    <script language="javascript" type="text/javascript">#}
+{##}
+{#                        alert("修改失败");#}
+{#                        window.location.href="{% url "user_page" %}";#}
+{##}
+{#                   </script>#}
+{##}
+{#                {% endif %}#}
+{#                {% if success %}#}
+{#                   <script language="javascript" type="text/javascript">#}
+{#                        alert("修改成功");#}
+{#                        window.location.href="{% url "user_page" %}";#}
+{#                   </script>#}
+{#                {% endif %}#}
             </form>
 
         </div>
